--- a/psy_game.html
+++ b/psy_game.html
@@ -449,7 +449,7 @@ display:none ;
 <div class="start_bg">
     <input type="text" id="name" placeholder="輸入名字" >
     <img src="https://drive.google.com/uc?export=download&id=1KOdy73IL63umCXiOdDZhDky9I93h_ECt" width = 100% ; height=100% ;>
-	<button class = "start_button1" onclick = "game1()">Colimyci</button>
+	<button class = "start_button1" onclick = "game1()">Colimycin</button>
 	<button class = "start_button2" onclick = "game2()">Brosym</button>
 	<button class = "start_button3" onclick = "game3()">Cubicin</button>
 	
