--- a/psy_game.html
+++ b/psy_game.html
@@ -83,8 +83,8 @@ display:none;
 .player2{
 position: absolute;
 bottom:28%;
-left:12% ;
-width : 35% ; 
+left:10% ;
+width : 42% ; 
 display:none;
 }
 .player3{
@@ -466,7 +466,7 @@ display:none ;
 
 #start_bg_2{
 position: absolute;
-top:-2%;
+top:0%;
 left:3% ;
 width : 70% ; 
 
@@ -477,7 +477,7 @@ z-index:201;
 
 #start_bg_3{
 position: absolute;
-top:15%;
+top:25%;
 right:4% ;
 width : 35% ; 
 
@@ -559,6 +559,9 @@ z-index:205;
 
 <audio src="BGM.mp3" id="audio_BGM" loop="true" volume="0.1" ></audio>
 <audio src="Attack.mp3" id="audio_Attack" ></audio>
+<audio src="Attack1.mp3" id="audio_Attack1" ></audio>
+<audio src="Attack2.mp3" id="audio_Attack2" ></audio>
+<audio src="Attack3.mp3" id="audio_Attack3" ></audio>
 <audio src="Win.mp3" id="audio_Win" ></audio>
 
 <div class="End_bg" ></div>
@@ -566,17 +569,12 @@ z-index:205;
 
 
 <div class="start_bg">
-    <input type="text" id="company" placeholder="醫院名字" >
-	<input type="text" id="name" placeholder="暱稱" >
-	<input type="text" id="phonenum" placeholder="電話號碼" >
+    <input type="text" id="company" placeholder="醫院" >
+	<input type="text" id="name" placeholder="姓名" >
+	<input type="text" id="phonenum" placeholder="聯絡電話" >
 	<img id = "start_bg_2" src="https://drive.google.com/uc?export=download&id=18bjDP7b4V5HxeRpGaHNh4C4qVYkrhpe4">
 	<img id = "start_bg_3" src="https://drive.google.com/uc?export=download&id=1hPDi_PG5eO5j42cJBIEAz2vbYAnB1lDD">
-	<img id = "start_bg_4" src="https://drive.google.com/uc?export=download&id=11zFwaE1mD4RVW22HXCmK5ULdS_GUZnct">
-	<img id = "start_bg_5" src="https://drive.google.com/uc?export=download&id=1SjT5PuMGY3W4yp9dfnfwSE7YJhSLrVKv">
-	<img id = "start_bg_6" src="https://drive.google.com/uc?export=download&id=1XpE9eJ9Y-qyyR34vQK4b92dS1aqtj-4j">
-	<img id = "start_bg_7" src="https://drive.google.com/uc?export=download&id=1GSTUodQatYtDzx2XfuihV2xOtfIWfDZN">
-	<img id = "start_bg_8" src="https://drive.google.com/uc?export=download&id=10gR8XGi0Wet34VGM8De2vuti_S5TglnX">
-	<img id = "start_bg_9" src="https://drive.google.com/uc?export=download&id=1VfpewG258QQrHJjO9HJssi6RzmBqJDNF">
+	
     <img src="https://drive.google.com/uc?export=download&id=1_bxiwoJWPt6VwHgr8xsRYQZUD488ovSH" width = 100% ; height=100% ;>
 	<button class = "start_button1" onclick = "game1()">Colimycin</button>
 	<button class = "start_button2" onclick = "game2()">Brosym</button>
@@ -596,8 +594,8 @@ z-index:205;
 
 	
     <img class = "player1" src="https://drive.google.com/uc?export=download&id=1fhMJ-_4JtdAMTQbR3x09jPTZjup32Lnk">
-	<img class = "player2" src="https://drive.google.com/uc?export=download&id=1VU6NSlUFbmyCdiF1xhpPofFQB0itg5bI">
-	<img class = "player3" src="https://drive.google.com/uc?export=download&id=1NXvLB3O8nPwmuGAkpjukUN7P-MJtm-3D">
+	<img class = "player2" src="https://drive.google.com/uc?export=download&id=1NXvLB3O8nPwmuGAkpjukUN7P-MJtm-3D">
+	<img class = "player3" src="https://drive.google.com/uc?export=download&id=1RxyGHooI9ZZVobkSSkTzpB7BIUBEcmUu">
     <div class = "player_info">
 
 	    <div  id="player_HP_value" ></div>
@@ -605,7 +603,7 @@ z-index:205;
 		<img id = "player_name2" src="https://drive.google.com/uc?export=download&id=18JQvqRw9R_mj0E5uQTSOAE2mZ3ArN0Np" >
 		<img id = "player_name3" src="https://drive.google.com/uc?export=download&id=1ubp-oHTvpw26A5i_VMliKZH7tTmINxmE" >
 	    <img id = "player_HP" src="https://drive.google.com/uc?export=download&id=18IUJ69vzVkt4CPRuk1CyDnG0MKPV2ron" >
-	    <img src="https://drive.google.com/uc?export=download&id=1-MH7i29RdS90By5JyfUUqcjZeivILIci" width = 100% ; height=100% ;>
+	    <img src="https://drive.google.com/uc?export=download&id=1c7-m2KYPqSgGZ4BlxD-OlSPsWrkaXcQj" width = 100% ; height=100% ;>
 	</div>
 	
 	
