--- a/psy_game.html
+++ b/psy_game.html
@@ -14,10 +14,9 @@ body {
   position: absolute;
 
   width:100% ;
-  height:80%;
+  height:100%;
   background-color: pink;
-  max-width:30cm;
-  min-width:22cm;
+
   
   top: 0;  
   bottom: 0;  
@@ -34,10 +33,9 @@ body {
   position: absolute;
 
   width:100% ;
-  height:80%;
+  height:100%;
   background-color: pink;
-  max-width:30cm;
-  min-width:22cm;
+
   
   top: 0;  
   bottom: 0;  
@@ -53,7 +51,7 @@ body {
   position: absolute;
 
   width:100% ;
-  height:80%;
+  height:100%;
   background-color: pink;
   max-width:30cm;
   min-width:22cm;
@@ -346,7 +344,7 @@ z-index:10;
 
 #company{
 	position: absolute;
-	top:50%;
+	top:52%;
 	right:6% ;
 	width : 25% ; 
 	height:5%;
@@ -357,7 +355,7 @@ z-index:10;
 
 #name{
 	position: absolute;
-	top:60%;
+	top:67%;
 	right:6% ;
 	width : 25% ; 
 	height:5%;
@@ -368,7 +366,7 @@ z-index:10;
 
 #phonenum{
 	position: absolute;
-	top:70%;
+	top:82%;
 	right:6% ;
 	width : 25% ; 
 	height:5%;
@@ -380,8 +378,9 @@ z-index:10;
 .start_button1 {
 	position: absolute;
 	top:50%;
-	left:37.5% ;
-	width : 25% ; 
+	left:36.5% ;
+	width : 27% ; 
+
 
 	z-index:250;
 	background:    #76a5af;
@@ -399,9 +398,9 @@ z-index:10;
   }
   .start_button2 {
 	position: absolute;
-	top:60%;
-	left:37.5% ;
-	width : 25% ; 
+	top:65%;
+	left:36.5% ;
+	width : 27% ; 
 
 
 	z-index:250;
@@ -420,9 +419,9 @@ z-index:10;
   }
   .start_button3 {
 	position: absolute;
-	top:70%;
-	left:37.5% ;
-	width : 25% ; 
+	top:80%;
+	left:36.5% ;
+	width : 27% ; 
 
 
 	z-index:250;
@@ -478,7 +477,7 @@ z-index:201;
 #start_bg_3{
 position: absolute;
 top:25%;
-right:4% ;
+right:20% ;
 width : 35% ; 
 
 z-index:202;
@@ -545,12 +544,35 @@ z-index:205;
 position: absolute;
 top:70%;
 left:4% ;
-width : 35% ; 
+width : 300px ; 
 
 z-index:205;
 
 
 }
+
+#main_view_size{
+
+  position: absolute;
+
+  width:768px ;
+  height:680px;
+  background-color: pink;
+
+  
+  
+  
+  top: 0;  
+  bottom: 0;  
+  left: 0;  
+  right: 0; 
+  margin: auto;
+
+  
+
+
+}
+
 
 
     
@@ -564,6 +586,8 @@ z-index:205;
 <audio src="Attack3.mp3" id="audio_Attack3" ></audio>
 <audio src="Win.mp3" id="audio_Win" ></audio>
 
+
+<div id="main_view_size">
 <div class="End_bg" ></div>
 
 
@@ -574,6 +598,8 @@ z-index:205;
 	<input type="text" id="phonenum" placeholder="聯絡電話" >
 	<img id = "start_bg_2" src="https://drive.google.com/uc?export=download&id=18bjDP7b4V5HxeRpGaHNh4C4qVYkrhpe4">
 	<img id = "start_bg_3" src="https://drive.google.com/uc?export=download&id=1hPDi_PG5eO5j42cJBIEAz2vbYAnB1lDD">
+	<img id = "start_bg_4" src="https://drive.google.com/uc?export=download&id=11zFwaE1mD4RVW22HXCmK5ULdS_GUZnct">
+	
 	
     <img src="https://drive.google.com/uc?export=download&id=1_bxiwoJWPt6VwHgr8xsRYQZUD488ovSH" width = 100% ; height=100% ;>
 	<button class = "start_button1" onclick = "game1()">Colimycin</button>
@@ -677,6 +703,7 @@ z-index:205;
 
 </div>
 
+</div>
 
 
 
