--- a/psy_game.html
+++ b/psy_game.html
@@ -2,6 +2,12 @@
 <html>
 <body>
 <head>
+	
+<META HTTP-EQUIV="PRAGMA" CONTENT="NO-CACHE">
+
+<META HTTP-EQUIV="EXPIRES" CONTENT="0">
+
+<META HTTP-EQUIV="CACHE-CONTROL">
 
 <style>
 
